force-app/main/default/objects/sonar__Field_Details__c/sonar__Field_Details__c.object-meta.xml
<CustomObject>
    <label>Field Details</label>
    <nameField>
        <label>Field Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>