force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Analysis_Object__c.field-meta.xml
<CustomField>
    <fullName>sonar__Analysis_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analysis Object</label>
    <referenceTo>sonar__Analysis_Object__c</referenceTo>
    <relationshipLabel>Fields Details</relationshipLabel>
    <relationshipName>Fields_Details</relationshipName>
    <type>Lookup</type>
</CustomField>