force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Created_By__c.field-meta.xml
<CustomField>
    <fullName>sonar__Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fields_Details</relationshipName>
    <type>Lookup</type>
</CustomField>