force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>sonar__Created_Date__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>