force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>sonar__Field_Label__c</fullName>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>