force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Insight_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>sonar__Insight_Record_Count__c</fullName>
    <label>Insight Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>