force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Insights_Count__c.field-meta.xml
<CustomField>
    <fullName>sonar__Insights_Count__c</fullName>
    <label>Insights Count</label>
    <summaryForeignKey>sonar__Insight__c.sonar__Field_Details__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>