force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Is_Custom__c.field-meta.xml
<CustomField>
    <fullName>sonar__Is_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom</label>
    <type>Checkbox</type>
</CustomField>