force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Modified_By__c.field-meta.xml
<CustomField>
    <fullName>sonar__Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fields_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>