force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>sonar__Modified_Date__c</fullName>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>