force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Populated_Percentage__c.field-meta.xml
<CustomField>
    <fullName>sonar__Populated_Percentage__c</fullName>
    <formula>IF( sonar__Populated_Records__c = 0, 0,
			IF( ROUND(sonar__Populated_Records__c/sonar__Records_Count__c , 1) == 0
							, sonar__Populated_Records__c/sonar__Records_Count__c + 0.01
							, IF( 
				    AND( ROUND(sonar__Populated_Records__c/sonar__Records_Count__c, 1) == 1 , 
												sonar__Populated_Records__c/sonar__Records_Count__c != 1
											)
			     , 
			     sonar__Populated_Records__c/sonar__Records_Count__c - 0.01
			     , 
			     IF(ROUND(sonar__Populated_Records__c * 10/sonar__Records_Count__c, 1) &lt; sonar__Populated_Records__c * 10/sonar__Records_Count__c,
											sonar__Populated_Records__c/sonar__Records_Count__c + 0.01, sonar__Populated_Records__c/sonar__Records_Count__c
										)
		      )
			)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Populated Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>