force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__Populated_Records__c.field-meta.xml
<CustomField>
    <fullName>sonar__Populated_Records__c</fullName>
    <label>Populated Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>