force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__References__c.field-meta.xml
<CustomField>
    <fullName>sonar__References__c</fullName>
    <label>References</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>