force-app/main/default/objects/sonar__Field_Details__c/fields/sonar__SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>sonar__SObject_API_Name__c</fullName>
    <formula>sonar__Analysis_Object__r.sonar__SObject__r.sonar__Api_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SObject API Name</label>
    <type>Text</type>
</CustomField>