force-app/main/default/objects/sonar__Field_Details__c/listViews/sonar__All.listView-meta.xml
<ListView>
    <fullName>sonar__All</fullName>
    <columns>NAME</columns>
    <columns>sonar__Analysis_Object__c</columns>
    <columns>sonar__Is_Custom__c</columns>
    <columns>sonar__Populated_Percentage__c</columns>
    <columns>sonar__Records_Count__c</columns>
    <columns>sonar__Field_Type__c</columns>
    <columns>sonar__References__c</columns>
    <columns>sonar__Insights_Count__c</columns>
    <columns>sonar__SObject_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>