force-app/main/default/objects/sonar__Field_Details__c/listViews/sonar__All1.listView-meta.xml
<ListView>
    <fullName>sonar__All1</fullName>
    <columns>NAME</columns>
    <columns>sonar__References__c</columns>
    <columns>sonar__Is_Custom__c</columns>
    <columns>sonar__Field_Type__c</columns>
    <columns>sonar__Field_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>