force-app/main/default/objects/sonar__Field_Details__c/listViews/sonar__All2.listView-meta.xml
<ListView>
    <fullName>sonar__All2</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>